--- a/apply.html
+++ b/apply.html
@@ -98,17 +98,19 @@
 
 <script>
 document.getElementById("applyForm").addEventListener("submit", function(e) {
+  e.preventDefault();
   const overlay = document.getElementById("formOverlay");
   const overlayContent = document.getElementById("overlayContent");
   overlay.classList.add("visible");
   overlayContent.innerHTML = '<span class="sending-text">Sending...</span>';
 
-  // Let the form post as usual
+  // Try the Formspree fetch submission
   fetch(this.action, {
     method: this.method,
     body: new FormData(this),
     headers: { 'Accept': 'application/json' }
-  }).then(response => {
+  })
+  .then(response => {
     if (response.ok) {
       overlayContent.innerHTML = `
         <div class="checkmark-container">
@@ -122,17 +124,21 @@ document.getElementById("applyForm").addEventListener("submit", function(e) {
         window.location.href = "https://www.wolfwellness.life/thank-you.html";
       }, 3500);
     } else {
-      overlayContent.innerHTML = '<p class="error-text">Something went wrong. Please try again.</p>';
-      setTimeout(() => overlay.classList.remove("visible"), 3000);
+      throw new Error("Network issue");
     }
-  }).catch(() => {
-    overlayContent.innerHTML = '<p class="error-text">Network error. Please try again.</p>';
-    setTimeout(() => overlay.classList.remove("visible"), 3000);
+  })
+  .catch(() => {
+    // Graceful Android fallback with brief visual continuity
+    overlayContent.innerHTML = '<span class="sending-text">Sending...</span>';
+    setTimeout(() => {
+      overlay.classList.remove("visible");
+      this.submit(); // fallback to native form submission
+    }, 1000);
   });
-
-  e.preventDefault();
 });
 </script>
+
+
 
 
     </section>
