--- a/apply.html
+++ b/apply.html
@@ -59,13 +59,16 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <header class="hero">
-    <div class="hero-content fade-in">
-      <h1>Reclaim Your Energy, Focus & Strength</h1>
-      <p>A personalized 1:1 virtual wellness system for high-performing professionals ready to optimize performance, confidence, and longevity — in just two 30-minute sessions per week.</p>
+  <header class="hero fade-in">
+  <div class="hero-content">
+    <h1 class="fade-in">Reclaim Your Energy, Focus & Strength</h1>
+    <p class="fade-in">A personalized 1:1 virtual wellness system for high-performing professionals ready to optimize performance, confidence, and longevity — in just two 30-minute sessions per week.</p>
+    <div class="hero-buttons fade-in">
       <button class="cta-button" onclick="document.getElementById('apply').scrollIntoView({ behavior: 'smooth' })">Apply Now</button>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <main>
     <section id="apply" class="fade-in">
