--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>W.O.L.F. Wellness | Wellness. Optimized.</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
 
 <script type="application/ld+json">
 {
@@ -257,6 +259,28 @@
       W.O.L.F. Wellness offers a tailored path to feeling and living your best — 
       where luxury meets longevity.
     </p>
+  </div>
+</section>
+
+<div class="section-divider"></div>
+
+<section class="founder">
+  <div class="founder-inner">
+    <div class="founder-photo-wrapper">
+      <div class="founder-image">
+        <img src="founder-image1.png" alt="Founder of W.O.L.F. Wellness" class="founder-photo">
+        <p class="founder-signature">Founder & Lead Coach, W.O.L.F. Wellness</p>
+      </div>
+    </div>
+
+    <div class="founder-text">
+      <h2>Meet the Founder</h2>
+      <p>
+        With over eight years of experience working one-on-one as a personal trainer and lifestyle coach — and more than two decades of dedicated self-study in nutrition and holistic wellness — 
+        <strong>Christopher Estevez</strong> founded W.O.L.F. Wellness to redefine what it means to live optimally. 
+        Guided by a deep understanding of movement, mindfulness, and sustainable habit design, he helps clients cultivate lasting strength, vitality, and balance — aligning body, mind, and lifestyle for true wellness.
+      </p>
+    </div>
   </div>
 </section>
 
