--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 <meta property="og:url" content="https://wolfwellness.life/">
 <meta property="og:title" content="W.O.L.F. Wellness — Executive Fitness & Performance Coaching">
 <meta property="og:description" content="Elite personal training and wellness coaching designed for busy professionals and high achievers.">
-<meta property="og:image" content="https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png">
+<meta property="og:image" content="https://wolfwellness.life/wolf-hero-preview.png">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://wolfwellness.life/">
 <meta name="twitter:title" content="W.O.L.F. Wellness — Executive Fitness & Performance Coaching">
 <meta name="twitter:description" content="Customized coaching for strength, recovery, and performance.">
-<meta name="twitter:image" content="https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png">
+<meta name="twitter:image" content="https://wolfwellness.life/wolf-hero-preview.png">
 
 <script type="application/ld+json">
 {
