--- a/apply.html
+++ b/apply.html
@@ -24,10 +24,6 @@
 
 <title>Apply | W.O.L.F. Wellness</title>
 
-<!-- Prevent indexing for ad landing page -->
-<meta name="robots" content="noindex, nofollow, noarchive">
-<link rel="canonical" href="https://wolfwellness.life/apply.html">
-
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="apply.css">
   <link rel="icon" href="/favicon.ico" />
@@ -73,7 +69,7 @@
 <!-- 💬 Open Graph / Facebook / LinkedIn -->
 <meta property="og:title" content="Apply Now | W.O.L.F. Wellness">
 <meta property="og:description" content="Apply for personalized 1-on-1 or virtual wellness coaching with W.O.L.F. Wellness. Take the first step toward a stronger, balanced, optimized you.">
-<meta property="og:image" content="https://wolfwellness.life/images/wolf-hero-preview.png">
+<meta property="og:image" content="https://wolfwellness.life/wolf-hero-preview.png">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1080">
 <meta property="og:image:height" content="1080">
@@ -84,7 +80,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Apply Now | W.O.L.F. Wellness">
 <meta name="twitter:description" content="Apply for personalized 1-on-1 or virtual wellness coaching with W.O.L.F. Wellness. Take the first step toward a stronger, balanced, optimized you.">
-<meta name="twitter:image" content="https://wolfwellness.life/images/wolf-hero-preview.png">
+<meta name="twitter:image" content="https://wolfwellness.life/wolf-hero-preview.png">
 
 <!-- 🎨 Browser Theme Color -->
 <meta name="theme-color" content="#0b3d2e">
