--- a/thank-you.html
+++ b/thank-you.html
@@ -23,10 +23,6 @@
 
 <title>Thank You | W.O.L.F. Wellness</title>
 
-<!-- Prevent indexing for ad thank-you page -->
-<meta name="robots" content="noindex, nofollow, noarchive">
-<link rel="canonical" href="https://wolfwellness.life/thank-you.html">
-
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="apply.css">
   <link rel="icon" href="/favicon.ico">
@@ -66,7 +62,7 @@
 <!-- 💬 Open Graph / Facebook / LinkedIn -->
 <meta property="og:title" content="Thank You | W.O.L.F. Wellness">
 <meta property="og:description" content="Thank you for applying to W.O.L.F. Wellness. Our team will review your information and contact you soon to begin your personalized coaching journey.">
-<meta property="og:image" content="https://wolfwellness.life/images/wolf-hero-preview.png">
+<meta property="og:image" content="https://wolfwellness.life/wolf-hero-preview.png">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1080">
 <meta property="og:image:height" content="1080">
@@ -77,7 +73,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Thank You | W.O.L.F. Wellness">
 <meta name="twitter:description" content="Thank you for applying to W.O.L.F. Wellness. Our team will review your information and contact you soon to begin your personalized coaching journey.">
-<meta name="twitter:image" content="https://wolfwellness.life/images/wolf-hero-preview.png">
+<meta name="twitter:image" content="https://wolfwellness.life/wolf-hero-preview.png">
 
 <!-- 🎨 Browser Theme Color -->
 <meta name="theme-color" content="#0b3d2e">
