--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   "@type": "Organization",
   "name": "W.O.L.F. Wellness",
   "url": "https://wolfwellness.life",
-  "logo": "https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png",
+  "logo": "https://wolfwellness.life/wolf-hero-preview.png",
   "description": "Elite personal training and holistic wellness coaching for high-performing professionals. Virtual and in-person programs focused on performance, recovery, and mindset.",
   "sameAs": [
     "https://www.linkedin.com/company/wolfwellness",
@@ -163,9 +163,9 @@
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
   "name": "W.O.L.F. Wellness",
-  "image": "https://wolfwellness.life/WOLF%20Wellness%20Logo%20ChatGPT%20Image%20Oct%2020%2C%202025%2C%2006_37_59%20PM.png",
+  "image": "https://wolfwellness.life/wolf-hero-preview.png",
   "url": "https://wolfwellness.life",
-  "telephone": "+1-305-555-2049",
+  "telephone": "+1-305-301-1555",
   "priceRange": "$$$",
   "description": "Holistic personal training and executive wellness coaching for professionals in Miami and beyond. Blending fitness, mindset, and lifestyle optimization through personalized virtual and in-person programs.",
   "address": {
