--- a/index.html
+++ b/index.html
@@ -14,46 +14,68 @@
   "@context": "https://schema.org",
   "@type": "ItemList",
   "name": "W.O.L.F. Wellness Insights Library",
-  "description": "Expert performance and wellness insights for high-performing professionals — from executive fitness to stress mastery and travel recovery.",
-  "numberOfItems": 3,
+  "description": "Executive fitness, resilience, and performance optimization insights from W.O.L.F. Wellness.",
+  "numberOfItems": 6,
   "itemListElement": [
     {
       "@type": "ListItem",
       "position": 1,
-      "url": "https://yourdomain.com/insights-high-performers-paradox.html",
+      "url": "https://wolfwellness.life/insights-high-performers-paradox.html",
       "name": "The High-Performer’s Paradox: Why Success Often Sabotages Health",
-      "image": "https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=600&q=80"
+      "image": "https://images.unsplash.com/photo-1490645935967-10de6ba17061?auto=format&fit=crop&w=1600&q=80"
     },
     {
       "@type": "ListItem",
       "position": 2,
-      "url": "https://yourdomain.com/insights-virtual-coaching-executives.html",
+      "url": "https://wolfwellness.life/insights-virtual-coaching-executives.html",
       "name": "Virtual Coaching for Executives: Achieving Maximum Impact in 30 Minutes",
-      "image": "https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=600&q=80"
+      "image": "https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1600&q=80"
     },
     {
       "@type": "ListItem",
       "position": 3,
-      "url": "https://yourdomain.com/insights-executive-travel-guide.html",
+      "url": "https://wolfwellness.life/insights-executive-travel-guide.html",
       "name": "The Executive Traveler’s Guide to Energy, Sleep, and Recovery",
-      "image": "https://images.unsplash.com/photo-1521790797524-b2497295b8a0?auto=format&fit=crop&w=600&q=80"
+      "image": "https://images.unsplash.com/photo-1521790797524-b2497295b8a0?auto=format&fit=crop&w=1600&q=80"
+    },
+    {
+      "@type": "ListItem",
+      "position": 4,
+      "url": "https://wolfwellness.life/insights-training-as-you-age.html",
+      "name": "Training as You Age: Longevity Strategies for Strength and Mobility",
+      "image": "https://images.unsplash.com/photo-1598971639058-48b0017a03d2?auto=format&fit=crop&w=1600&q=80"
+    },
+    {
+      "@type": "ListItem",
+      "position": 5,
+      "url": "https://wolfwellness.life/insights-precision-recovery.html",
+      "name": "Precision Recovery: How to Train Smarter, Sleep Better, and Perform Longer",
+      "image": "https://images.unsplash.com/photo-1526406915894-6c1d7953d1e7?auto=format&fit=crop&w=1600&q=80"
+    },
+    {
+      "@type": "ListItem",
+      "position": 6,
+      "url": "https://wolfwellness.life/insights-science-of-resilience.html",
+      "name": "The Science of Resilience: Building Mental and Physical Strength Under Pressure",
+      "image": "https://images.unsplash.com/photo-1449247709967-d4461a6a6103?auto=format&fit=crop&w=1600&q=80"
     }
   ],
   "author": {
     "@type": "Organization",
     "name": "W.O.L.F. Wellness",
-    "url": "https://yourdomain.com"
+    "url": "https://wolfwellness.life"
   },
   "publisher": {
     "@type": "Organization",
     "name": "W.O.L.F. Wellness",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://yourdomain.com/WOLF%20Wellness%20Logo.png"
+      "url": "https://wolfwellness.life/wolf-hero-preview.png"
     }
   }
 }
 </script>
+
 
 <meta name="title" content="W.O.L.F. Wellness — Executive Fitness & Performance Coaching">
 <meta name="description" content="Elite personal training, virtual coaching, and holistic wellness for high-performing professionals. Achieve peak physical, mental, and emotional performance.">
@@ -78,8 +100,8 @@
   "description": "Elite personal training and holistic wellness coaching for high-performing professionals. Virtual and in-person programs focused on performance, recovery, and mindset.",
   "sameAs": [
     "https://www.linkedin.com/company/wolfwellness",
-    "https://www.instagram.com/wolfwellness",
-    "https://www.facebook.com/wolfwellness"
+    "https://www.instagram.com/wolfwellness.life/",
+    "https://www.facebook.com/share/17dsmc1KYz/?mibextid=wwXIfr"
   ],
   "founder": {
     "@type": "Person",
@@ -205,8 +227,8 @@
   ],
   "sameAs": [
     "https://www.linkedin.com/company/wolfwellness",
-    "https://www.instagram.com/wolfwellness",
-    "https://www.facebook.com/wolfwellness"
+    "https://www.instagram.com/wolfwellness.life/",
+    "https://www.facebook.com/share/17dsmc1KYz/?mibextid=wwXIfr"
   ],
   "serviceType": [
     "Holistic Personal Training",
