--- a/index.html
+++ b/index.html
@@ -288,23 +288,28 @@
 
 <section class="founder">
   <div class="founder-inner">
-    <div class="founder-photo-wrapper">
-      <div class="founder-image">
-        <img src="founder-image1.png" alt="Founder of W.O.L.F. Wellness" class="founder-photo">
-        <p class="founder-signature">Founder & Lead Coach, W.O.L.F. Wellness</p>
-      </div>
+    
+    <!-- Founder Image Wrapper -->
+    <div class="founder-image">
+      <img src="founder-image1.png" alt="Founder of W.O.L.F. Wellness">
+      <p class="founder-signature">Founder & Lead Coach, W.O.L.F. Wellness</p>
     </div>
 
+    <!-- Founder Bio Text -->
     <div class="founder-text">
       <h2>Meet the Founder</h2>
       <p>
-        With over eight years of experience working one-on-one as a personal trainer and lifestyle coach — and more than two decades of dedicated self-study in nutrition and holistic wellness — 
+        With over eight years of experience working one-on-one as a personal trainer and lifestyle coach — 
+        and more than two decades of dedicated self-study in nutrition and holistic wellness — 
         <strong>Christopher Estevez</strong> founded W.O.L.F. Wellness to redefine what it means to live optimally. 
-        Guided by a deep understanding of movement, mindfulness, and sustainable habit design, he helps clients cultivate lasting strength, vitality, and balance — aligning body, mind, and lifestyle for true wellness.
+        Guided by a deep understanding of movement, mindfulness, and sustainable habit design, 
+        he helps clients cultivate lasting strength, vitality, and balance — aligning body, mind, and lifestyle for true wellness.
       </p>
     </div>
+
   </div>
 </section>
+
 
 
 <div class="section-divider"></div>
